--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ rich = { version = "*" }
 
 flake8 = { version = "*", optional = true }  # Development dependency.
 invoke = { version = "*", optional = true }  # Development dependency.
+networkx = { version = "*", optional = true }
 pre-commit = { version = "*", optional = true }  # Development dependency.
+pygraphviz = { version = "*", optional = true }
 yapf = { version = "0.23", optional = true }  # Development dependency.
 
 [tool.poetry.dev-dependencies]
@@ -28,6 +30,8 @@ development = [
     "pre-commit",
     "yapf"
 ]
+graphviz = [ "pygraphviz" ]
+optional = [ "networkx" ]
 
 [build-system]
 requires = [ "poetry>=0.12" ]
